<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:maxHeight="400dp"
            android:minHeight="100dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_display_mode"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <RadioGroup
            android:id="@+id/select_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@id/show_normal"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/show_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_default" />

            <RadioButton
                android:id="@+id/show_mask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/btn_mask" />

            <RadioButton
                android:id="@+id/show_custombg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/btn_custom_bg" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_images"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/select_front_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_front" />

            <Button
                android:id="@+id/select_bg_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/select_bg" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>